// Bun Snapshot v1, https://bun.sh/docs/test/snapshots
// W31: 12 complete bodies reviewed in W31e-bun-alignment.json.

exports[`Input should render with default props 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should render with disabled prop 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" disabled="" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should render with allowClear prop 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should not have padding right when allowClear is false 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHdgbeqfy9jzy65_g4 " value="">
  </div>
</div>"
`;

exports[`Input should not show clear button when value is empty 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should render error style when error is true 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHceh4jiuz6cw_1f98 OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should have typography when typography is provided 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk typo-inlineLabelS" value="">
  </div>
</div>"
`;

exports[`Input should pass className prop to error message component 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHceh4jiuz6cw_1f98 OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
    <span aria-label="error-message" class="error-message OLbottom-v_d8px-o1 OHanzt1fpse996zok6 OLleft-v0-o1 OHao8yiohppbc31eya OHaj2jjl7ki_w9nkrc typo-inputPlaceholder">
      Error message
    </span>
  </div>
</div>"
`;

exports[`Input should pass className prop to icon component 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <div aria-label="icon" class="icon OLdisplay-vflex-o0 OHb5lnub7j06ag8zzq OHb7gvrmdw_y_s8k48 OLheight-v24px-o1 OLwidth-v24px-o1 OLleft-v12px-o1 OHao8yiohppbc31eya OLtop-v50_c-o1 OHco78e30t6p151990 OHbnsouu52ic6nrqsh">
      <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M14.5006 15.9949C13.445 16.6754 12.1959 17.069 10.8571 17.069C7.07005 17.069 4 13.9195 4 10.0345C4 6.14945 7.07005 3 10.8571 3C14.6442 3 17.7143 6.14945 17.7143 10.0345C17.7143 11.7044 17.1471 13.2384 16.1995 14.4448C16.2121 14.4567 16.2245 14.4688 16.2367 14.4813L19.6653 17.9986C20.1116 18.4564 20.1116 19.1988 19.6653 19.6566C19.2189 20.1145 18.4953 20.1145 18.049 19.6566L14.6204 16.1394C14.5761 16.0938 14.5361 16.0455 14.5006 15.9949ZM16.2143 10.0345C16.2143 13.1274 13.7799 15.569 10.8571 15.569C7.93435 15.569 5.5 13.1274 5.5 10.0345C5.5 6.94154 7.93435 4.5 10.8571 4.5C13.7799 4.5 16.2143 6.94154 16.2143 10.0345Z" fill="currentColor" fill-rule="evenodd">
        </path>
      </svg>
    </div>
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHdltqfdd26noanyr0 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Input should pass props to ClearButton component 1`] = `
"<div>
  <button aria-label="clear-button" type="button" class="OHbxfmicxo8b5tj279 OHdkxvb1ld_78dyein OLborder-vnone-o1 OHagwbcppqzwaj4vix OLheight-v20px-o1 OLwidth-v20px-o1 OHbwpphmvra2jtcez0 OHbn3vk_8bv59jbjl4 OLdisplay-vflex-o1 OHbp3l2n25zze96kgt OLpadding-v2px-o1 OHao8yiohppbc31eya OLright-v12px-o1 OLtop-v50_c-o1 OHco78e30t6p151990 ">
    <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
      <path d="M18 6L6 18" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
      </path>
      <path d="M6 6L18 18" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
      </path>
    </svg>
  </button>
</div>"
`;

exports[`Input should render disabled icon style when disabled is true 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <div aria-label="icon" class=" OLdisplay-vflex-o0 OHb5lnub7j06ag8zzq OHb7gvrmdw_y_s8k48 OLheight-v24px-o1 OLwidth-v24px-o1 OLleft-v12px-o1 OHao8yiohppbc31eya OLtop-v50_c-o1 OHco78e30t6p151990 OHbiq56mj94yqjmap3">
      <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
        <path clip-rule="evenodd" d="M14.5006 15.9949C13.445 16.6754 12.1959 17.069 10.8571 17.069C7.07005 17.069 4 13.9195 4 10.0345C4 6.14945 7.07005 3 10.8571 3C14.6442 3 17.7143 6.14945 17.7143 10.0345C17.7143 11.7044 17.1471 13.2384 16.1995 14.4448C16.2121 14.4567 16.2245 14.4688 16.2367 14.4813L19.6653 17.9986C20.1116 18.4564 20.1116 19.1988 19.6653 19.6566C19.2189 20.1145 18.4953 20.1145 18.049 19.6566L14.6204 16.1394C14.5761 16.0938 14.5361 16.0455 14.5006 15.9949ZM16.2143 10.0345C16.2143 13.1274 13.7799 15.569 10.8571 15.569C7.93435 15.569 5.5 13.1274 5.5 10.0345C5.5 6.94154 7.93435 4.5 10.8571 4.5C13.7799 4.5 16.2143 6.94154 16.2143 10.0345Z" fill="currentColor" fill-rule="evenodd">
        </path>
      </svg>
    </div>
    <input aria-label="input" disabled="" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHdltqfdd26noanyr0 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;

exports[`Controlled Input should render with value 1`] = `
"<div>
  <div class=" OHaiu_a11ys07ctz7a OHa8_8n2alwf3oubm2 OHdqqzxvldu9q2mwjt OHbcp5ivoqtb5it8ir">
    <input aria-label="input" class=" OHbz3jdmo50kw2vcsz OHdjn2h2rsj3wk002r OHcirwxqo0h_vwpvtv OHbct6iaj2s9i1s2hn OHadrgocfk4_bz_cpx OHcyjsx9c_0cwvbyg1 OHdbslbzw1vgtj4qhf OHcx23k75cuofoe8xf OHa4dd7jyodo8n1bi0 OHactu1tv7h3hlcmj7 OHcgb5nqjf2289lr3t OHa98hf0_ryt4y7y34 OHbv2rqn_lyq182l3k OHbmmuam2bsbq9s4jk OHap30l99pe_bkb38j OHdclea6mt04qj5etg OHcxmna4x1i_j47juy OHaysmrl3a29lvh9u6 OHa7d17bjl62fjktzk " value="">
  </div>
</div>"
`;
